--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,22 @@ bs4==0.0.1
 certifi==2019.11.28
 cffi==1.13.2
 chardet==3.0.4
+Click==7.0
 constantly==15.1.0
 cryptography==2.8
 cssselect==1.1.0
 fake-useragent==0.1.11
+Flask==1.1.1
 hyperlink==19.0.0
 idna==2.8
 incremental==17.5.0
+itsdangerous==1.1.0
+Jinja2==2.11.1
 lxml==4.4.2
+MarkupSafe==1.1.1
 parse==1.14.0
 parsel==1.5.2
+peewee==3.13.1
 Protego==0.1.15
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
@@ -37,4 +43,6 @@ Twisted==19.10.0
 urllib3==1.25.8
 w3lib==1.21.0
 websockets==8.1
+Werkzeug==1.0.0
+xmltodict==0.12.0
 zope.interface==4.7.1
